# Lucifex

./: .env.example  .gitignore  README.md  chunk_a_initial_setup.md
backend/: README.md  alembic.ini  pyproject.toml
backend/api/: README.md
backend/auth/: README.md
backend/config/: README.md
backend/core/: README.md
backend/db/: README.md
backend/db/migrations/: README.md
backend/db/models/: README.md
backend/db/repositories/: README.md
backend/jobs/: README.md
backend/providers/: README.md
backend/providers/tts/: README.md
backend/src/lucifex/: __init__.py
backend/src/lucifex/agent/: README.md
backend/src/lucifex/agent/prompts/: README.md
backend/src/lucifex/agent/tools/: README.md
backend/src/lucifex/auth/: README.md  __init__.py  passwords.py  tokens.py
backend/src/lucifex/config/: README.md  __init__.py  settings.py
backend/src/lucifex/core/: README.md  __init__.py  errors.py
backend/src/lucifex/db/: base.py  session.py
backend/src/lucifex/db/migrations/: env.py
backend/src/lucifex/db/migrations/versions/: 20260501_0001_a1b2c3d4e5f6_initial_users_and_sessions.py  README.md
backend/src/lucifex/db/models/: __init__.py  users.py
backend/src/lucifex/observability/: README.md
backend/src/lucifex/providers/image_generation/: README.md
backend/src/lucifex/providers/llm/: README.md
backend/src/lucifex/providers/video_generation/: README.md
backend/tests/: README.md
backend/tests/e2e/: README.md
backend/tests/integration/: README.md
backend/tests/unit/: README.md  test_errors.py  test_passwords.py  test_settings.py  test_tokens.py
backend/workers/: README.md
chunks/: README.md  chunk_b_folder_scaffold.md  chunk_c_python_environment.md  chunk_d_database_scaffold.md  chunk_f_settings_config.md  chunk_g_core_errors.md
docs/: README.md  architecture.md  decision_log.md
frontend/: README.md
frontend/app/: README.md
frontend/components/: README.md
frontend/features/: README.md
frontend/lib/: README.md
frontend/public/: README.md
frontend/styles/: README.md
frontend/tests/: README.md
infra/: README.md
infra/deployment/: README.md
infra/docker/: README.md
infra/github-actions/: README.md
infra/scripts/: README.md
output/: README.md
